# udemy_fastapi_basic

./: README.md  api_test.py  database.py  fastapi-app.db  main.py  migrate_db.py  pyproject.toml
cruds/: contact.py
models/: contact.py
routers/: contact.py
schemas/: contact.py
src/fastapi_test/: __init__.py
